--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,200 @@
+@font-face {
+  font-family: 'Futura-Medium';
+  src: url('assets/fonts/Futura/futura.ttc') format('truetype');
+}
+
+@font-face {
+  font-family: 'Futura-MediumItalic';
+  src: url('assets/fonts/Futura/futura.ttc') format('truetype');
+}
+
+@font-face {
+  font-family: 'Futura-Bold';
+  src: url('assets/fonts/Futura/futura.ttc') format('truetype');
+}
+
 * {
   margin: 0;
   padding: 0;
+  color: #f9f9f9;
+  background-color: #1f1f1f;
   /* box-sizing: border-box; */
 }
 
+
+
 body {
-  background: #333;
+  background-color: #1f1f1f;
+  width: 100%;
 }
 
-canvas {
+.flex-box{
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center; /* 縦方向中央揃え（Safari用） */
+  align-items: center; /* 縦方向中央揃え */
+  -webkit-justify-content: center; /* 横方向中央揃え（Safari用） */
+  justify-content: center; /* 横方向中央揃え */
+}
+
+
+nav {
+  position: fixed;
+  font-size: 48px;
+  font-family: "Futura-Bold";
+}
+
+a { 
+  text-decoration: none; 
+}
+
+a:link { 
+  color: #f9f9f9; 
+}
+
+a:visited { 
+  color: #f9f9f9;
+}
+
+.four-corner {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+}
+
+.box{
+  height: 190px;
+  width: 200px;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateY(-50%) translateX(-50%);
-  -webkit-transform: translateY(-50%) translateX(-50%);
+  /* width: (100% - 1020)/2; */
 }
 
+.box-topleft{
+  top: 0;
+  left: 0;
+}
+
+.box-topright{
+  top: 0;
+  right: 0;
+}
+
+.box-bottomright{
+  right: 0;
+  bottom: 0;
+}
+
+.box-bottomleft{
+  left: 0;
+  bottom: 0;
+}
+
+.container{
+  width: 1020px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.content{
+  height: 100vh;
+}
+
+.home {
+  position: relative;
+}
+
+.header{
+  width: 100%;
+  height: 190px;
+  text-align: center;
+  padding: auto 0;
+  position: relative;
+  font-size: 48px;
+  font-family: "Futura-Bold";
+}
+
+h1 {
+  text-align: center;
+  font-size: 72px;
+  -webkit-text-stroke: 2px #f9f9f9;
+  font-family: "Futura-Medium";
+  color: transparent;
+}
+
+h2 {
+  text-align: center;
+  font-size: 48px;
+  font-family: "Futura-MediumItalic";
+  padding: 0;
+}
+
+.profile {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center; /* 縦方向中央揃え（Safari用） */
+  align-items: center; /* 縦方向中央揃え */
+}
+
+.relation {
+  z-index: 2;
+}
+
+.left-about {
+  float: left;
+  width: 440px;
+}
+
+.right-about {
+  float: left;
+  width: 580px;
+  background-color: #fff;
+}
+
+.history {
+width: 100%;
+}
+
+.contents-paragraph {
+  width: 100%;
+}
+
+.year{
+  font-family: "Futura-Medium-Italic";
+  font-size: 24px;
+  width: 134px;
+  height: 70px;
+  float: left;
+}
+.action {
+  font-size: 36px;
+  font-family: "Futura-Medium";
+}
+
+.detail {
+  font-size: 24px;
+  font-family: "Futura-Medium";
+
+}
+
+#work {
+  
+}
+.work-box{
+  height: 350px;
+  width: 333px;
+  background-color: #fff;
+  float: left;
+  margin-right: 7px;
+}
+
+.work-square {
+  height: 230px;
+  width: 100%;
+}
+
+.work-title {
+  font-size: 48px;
+  color: #1f1f1f;
+  text-align: center;
+  font-family: "Futura-Medium";
+}
