--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ a:visited {
   position: relative;
   font-size: 48px;
   font-family: "Futura-Bold";
+  background-color: transparent;
 }
 
 h1 {
@@ -135,8 +136,19 @@ h2 {
   align-items: center; /* 縦方向中央揃え */
 }
 
-.relation {
-  z-index: 2;
+.web-box {
+  width: 100%;
+  height: 700px;
+  overflow: hidden;
+  position: relative;
+}
+
+#relation {
+  z-index: 3;
+  width: 100%;
+  height: 700px;
+  background-color: #fff;
+  position: absolute;
 }
 
 .left-about {
@@ -156,13 +168,14 @@ width: 100%;
 
 .contents-paragraph {
   width: 100%;
+  height: 74px;
 }
 
 .year{
   font-family: "Futura-Medium-Italic";
   font-size: 24px;
   width: 134px;
-  height: 70px;
+  height: 74px;
   float: left;
 }
 .action {
