--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,17 @@
 @font-face {
   font-family: 'Futura-Medium';
-  src: url('assets/fonts/Futura/futura.ttc') format('truetype');
+  src: url('assets/fonts/Futura/Futura-Medium.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Futura-MediumItalic';
-  src: url('assets/fonts/Futura/futura.ttc') format('truetype');
+  src: url('assets/fonts/Futura/Futura-MediumItalic.ttf');
+  font-style: italic;
 }
 
 @font-face {
   font-family: 'Futura-Bold';
-  src: url('assets/fonts/Futura/futura.ttc') format('truetype');
+  src: url('assets/fonts/Futura/Futura-Bold.ttf') format('truetype');
 }
 
 * {
@@ -20,8 +21,6 @@
   background-color: #1f1f1f;
   /* box-sizing: border-box; */
 }
-
-
 
 body {
   background-color: #1f1f1f;
@@ -36,7 +35,6 @@ body {
   -webkit-justify-content: center; /* 横方向中央揃え（Safari用） */
   justify-content: center; /* 横方向中央揃え */
 }
-
 
 nav {
   position: fixed;
@@ -56,6 +54,11 @@ a:visited {
   color: #f9f9f9;
 }
 
+a:hover {
+  -webkit-text-stroke: 1px #f9f9f9;
+  color: transparent;
+}
+
 .four-corner {
   position: relative;
   width: 100vw;
@@ -63,10 +66,14 @@ a:visited {
 }
 
 .box{
-  height: 190px;
+  height: 128px;
   width: 200px;
   position: absolute;
   /* width: (100% - 1020)/2; */
+}
+
+.box:hover {
+
 }
 
 .box-topleft{
@@ -97,6 +104,7 @@ a:visited {
 
 .content{
   height: 100vh;
+  background-color: tramsparent;
 }
 
 .home {
@@ -105,7 +113,7 @@ a:visited {
 
 .header{
   width: 100%;
-  height: 190px;
+  height: 128px;
   text-align: center;
   padding: auto 0;
   position: relative;
@@ -118,29 +126,29 @@ h1 {
   text-align: center;
   font-size: 72px;
   -webkit-text-stroke: 2px #f9f9f9;
-  font-family: "Futura-Medium";
+  font-family: "Futura-Bold";
   color: transparent;
+  line-height: 72px;
 }
 
 h2 {
   text-align: center;
   font-size: 48px;
   font-family: "Futura-MediumItalic";
-  padding: 0;
+  line-height: 48px;
+  margin-bottom: 48px;
 }
 
 .profile {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-align-items: center; /* 縦方向中央揃え（Safari用） */
-  align-items: center; /* 縦方向中央揃え */
+  padding-top: 24px;
+  width: 380px;
+  margin: 0 48px;
 }
+
 
 .web-box {
   width: 100%;
   height: 700px;
-  overflow: hidden;
-  position: relative;
 }
 
 #relation {
@@ -152,18 +160,21 @@ h2 {
 }
 
 .left-about {
+  position: relative;
   float: left;
   width: 440px;
+  height: 600px;
 }
 
 .right-about {
   float: left;
   width: 580px;
-  background-color: #fff;
 }
 
 .history {
-width: 100%;
+  width: 100%;
+  float: left;
+  margin-bottom: 8px;
 }
 
 .contents-paragraph {
@@ -172,7 +183,7 @@ width: 100%;
 }
 
 .year{
-  font-family: "Futura-Medium-Italic";
+  font-family: "Futura-MediumItalic";
   font-size: 24px;
   width: 134px;
   height: 74px;
@@ -181,12 +192,14 @@ width: 100%;
 .action {
   font-size: 36px;
   font-family: "Futura-Medium";
+  line-height: 47px;
+  float: left;
 }
 
 .detail {
   font-size: 24px;
-  font-family: "Futura-Medium";
-
+  font-family: "Futura-MediumItalic";
+  float: left;
 }
 
 #work {
@@ -195,7 +208,6 @@ width: 100%;
 .work-box{
   height: 350px;
   width: 333px;
-  background-color: #fff;
   float: left;
   margin-right: 7px;
 }
@@ -203,11 +215,37 @@ width: 100%;
 .work-square {
   height: 230px;
   width: 100%;
+  opacity: 0.2;
+}
+
+.work-square:hover {
+  opacity: 0.8;
 }
 
 .work-title {
+  opacity: 1;
   font-size: 48px;
   color: #1f1f1f;
   text-align: center;
   font-family: "Futura-Medium";
+}
+
+.upshelf {
+  margin-top: 128px;
+  height: 256px;
+  width: 100%;
+}
+
+.downshelf {
+  margin-top: 64px;
+  height: 256px;
+  width: 700px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.shelf {
+  height: 100%;
+  width: 320px;
+  float: left;
 }
