--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
 
 nav {
   position: fixed;
-  font-size: 48px;
+  font-size: 36px;
   font-family: "Futura-Bold";
 }
 
@@ -71,6 +71,7 @@ a:visited {
 a:hover {
   -webkit-text-stroke: 1px #f9f9f9;
   color: transparent;
+  transition: .7s;
 }
 
 .four-corner {
@@ -132,6 +133,11 @@ a:hover {
   animation: flicker 6s infinite step-end;
 }
 
+svg {
+  -webkit-filter: drop-shadow(0px 3px 10px rgba(255,255,255,.8));
+  filter: drop-shadow(0px 0px 10px rgba(255,255,255,.8));
+}
+
 .sns {
   position: relative;
   animation: flicker 2s infinite step-end;
@@ -162,15 +168,19 @@ h1 {
   color: transparent;
   line-height: 56px;
   background-color: transparent;
+  letter-spacing: 0.1em;
+  vertical-align: top;
 }
 
 h2 {
   text-align: center;
-  font-size: 36px;
+  font-size: 24px;
   font-family: "Futura-MediumItalic";
   line-height: 36px;
-  margin-bottom: 32px;
+  margin-bottom: 16px;
   background-color: transparent;
+  letter-spacing: 0.1em;
+  vertical-align: top;
 }
 
 .profile {
@@ -184,6 +194,7 @@ h2 {
   width: 1020px;
   height: 700px;
   position: relative;
+  background-color: #fff;
 }
 
 .relation {
@@ -208,7 +219,7 @@ h2 {
 .history {
   width: 100%;
   float: left;
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 
 .contents-paragraph {
@@ -247,6 +258,7 @@ h2 {
   height: 296px;
   width: 100%;
   opacity: 0.2;
+  transition: 1s;
 }
 
 .work-square::before,
@@ -281,10 +293,9 @@ h2 {
   transform: scale(1);
 }
 
-
 .work-title {
   opacity: 1;
-  font-size: 48px;
+  font-size: 36px;
   color: #f9f9f9;
   text-align: center;
   font-family: "Futura-Medium";
