--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,62 @@ nav {
   font-family: "Futura-Bold";
 }
 
+a span {
+  margin-top: 100px;
+  position: absolute;
+  left: 50%;
+  width: 24px;
+  height: 24px;
+  margin-left: -12px;
+  border-left: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-animation: sdb 2s infinite;
+  animation: sdb 2s infinite;
+  opacity: 0;
+  box-sizing: border-box;
+}
+a span:nth-of-type(1) {
+  -webkit-animation-delay: 0s;
+  animation-delay: 0s;
+}
+a span:nth-of-type(2) {
+  top: 750px;
+  -webkit-animation-delay: .15s;
+  animation-delay: .15s;
+  background-color: transparent;
+}
+a span:nth-of-type(3) {
+  top: 760px;
+  -webkit-animation-delay: .3s;
+  animation-delay: .3s;
+  background-color: transparent;
+}
+
+@-webkit-keyframes sdb {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes sdb {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 a { 
   text-decoration: none;
 }
