--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@
 body {
   background-color: #1f1f1f;
   width: 100%;
+  position: relative;
 }
 
 .flex-box{
@@ -73,8 +74,10 @@ a span {
   box-sizing: border-box;
 }
 a span:nth-of-type(1) {
+  top: 740px;
   -webkit-animation-delay: 0s;
   animation-delay: 0s;
+  background-color: transparent;
 }
 a span:nth-of-type(2) {
   top: 750px;
@@ -187,11 +190,6 @@ a:hover {
 .home {
   position: relative;
   animation: flicker 6s infinite step-end;
-}
-
-svg {
-  -webkit-filter: drop-shadow(0px 3px 10px rgba(255,255,255,.8));
-  filter: drop-shadow(0px 0px 10px rgba(255,255,255,.8));
 }
 
 .sns {
